// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`functions > delete 1`] = `""`;

exports[`functions > delete reports a friendly error when the function is missing 1`] = `""`;

exports[`functions > deploy --env encodes environment as JSON 1`] = `
"id: 1
status: building
memory_mib: 256
runtime: nodejs24
created_at: 2026-06-03T00:00:00Z
invocation_url: https://envfunc.functions.neon.tech
"
`;

exports[`functions > deploy --help documents --no-bundle and discovery order 1`] = `""`;

exports[`functions > deploy --help documents --no-bundle and discovery order 2`] = `""`;

exports[`functions > deploy --no-bundle rejects TypeScript 1`] = `""`;

exports[`functions > deploy --no-bundle rejects a directory with no root index.mjs or index.js 1`] = `""`;

exports[`functions > deploy --no-bundle rejects a file not named index.mjs or index.js 1`] = `""`;

exports[`functions > deploy --no-bundle zips a directory without esbuild 1`] = `
"id: 1
status: building
memory_mib: 256
runtime: nodejs24
created_at: 2026-06-03T00:00:00Z
invocation_url: https://nobundle.functions.neon.tech
"
`;

exports[`functions > deploy --no-bundle zips a single index.mjs file 1`] = `
"id: 1
status: building
memory_mib: 256
runtime: nodejs24
created_at: 2026-06-03T00:00:00Z
invocation_url: https://nbfile.functions.neon.tech
"
`;

exports[`functions > deploy --no-wait 1`] = `
"id: 1
status: building
memory_mib: 256
runtime: nodejs24
created_at: 2026-06-03T00:00:00Z
invocation_url: https://nowaitfunc.functions.neon.tech
"
`;

exports[`functions > deploy --src pointing at a file uses it as the entry 1`] = `
"id: 1
status: building
memory_mib: 256
runtime: nodejs24
created_at: 2026-06-03T00:00:00Z
invocation_url: https://srcfile.functions.neon.tech
"
`;

exports[`functions > deploy --wait exits 1 when the deployment fails 1`] = `
"Id              1
Status          failed
Invocation Url  https://failfunc.functions.neon.tech
Runtime         nodejs24
Memory Mib      256
Created At      2026-06-03T00:00:00Z

deployment error
Reason  Build failed: cannot resolve module left-pad
"
`;

exports[`functions > deploy --wait on first deploy (no prior active version) 1`] = `
"id: 1
status: completed
memory_mib: 256
runtime: nodejs24
created_at: 2026-06-03T00:00:00Z
invocation_url: https://newfunc.functions.neon.tech
"
`;

exports[`functions > deploy --wait retries through a transient poll error 1`] = `
"id: 1
status: completed
memory_mib: 256
runtime: nodejs24
created_at: 2026-06-03T00:00:00Z
invocation_url: https://flaky.functions.neon.tech
"
`;

exports[`functions > deploy --wait surfaces a non-transient poll error 1`] = `""`;

exports[`functions > deploy --wait times out when the deployment never becomes active 1`] = `""`;

exports[`functions > deploy --wait times out while the new version is still building 1`] = `
"id: 1
status: building
memory_mib: 256
runtime: nodejs24
created_at: 2026-06-03T00:00:00Z
invocation_url: https://stuckbuild.functions.neon.tech
"
`;

exports[`functions > deploy --wait until completed 1`] = `
"id: 2
status: completed
memory_mib: 256
runtime: nodejs24
created_at: 2026-06-03T00:00:00Z
invocation_url: https://redeploy.functions.neon.tech
"
`;

exports[`functions > deploy bundles index.js when it is the only entry 1`] = `
"id: 1
status: building
memory_mib: 256
runtime: nodejs24
created_at: 2026-06-03T00:00:00Z
invocation_url: https://jsonly.functions.neon.tech
"
`;

exports[`functions > deploy errors when the --src path does not exist 1`] = `""`;

exports[`functions > deploy errors when the entry file is missing 1`] = `""`;

exports[`functions > deploy fails cleanly when bundling fails 1`] = `""`;

exports[`functions > deploy picks index.js over index.mjs 1`] = `
"id: 1
status: building
memory_mib: 256
runtime: nodejs24
created_at: 2026-06-03T00:00:00Z
invocation_url: https://jsovermjs.functions.neon.tech
"
`;

exports[`functions > deploy picks index.ts over index.mjs and index.js 1`] = `
"id: 1
status: building
memory_mib: 256
runtime: nodejs24
created_at: 2026-06-03T00:00:00Z
invocation_url: https://tsoverjs.functions.neon.tech
"
`;

exports[`functions > deploy rejects a hyphenated slug 1`] = `""`;

exports[`functions > deploy rejects an invalid slug 1`] = `""`;

exports[`functions > deploy rejects malformed --env 1`] = `""`;

exports[`functions > deploy rejects the removed --entry flag 1`] = `""`;

exports[`functions > deploy rejects the removed --path flag 1`] = `""`;

exports[`functions > deploy requires at least one option 1`] = `""`;

exports[`functions > get (table) 1`] = `
"function
Slug            my-func
Name            My Func
Invocation Url  https://my-func.functions.neon.tech
Created At      2026-06-03T00:00:00Z

deployment (current, active)
Id          1
Status      completed
Runtime     nodejs24
Memory Mib  256
Created At  2026-06-03T00:00:00Z
"
`;

exports[`functions > get (table) shows plain failed status when there is no error 1`] = `
"function
Slug            failednoerr
Name            Failednoerr
Invocation Url  https://failednoerr.functions.neon.tech
Created At      2026-06-03T00:00:00Z

current deployment
Id          2
Status      failed
Runtime     nodejs24
Memory Mib  256
Created At  2026-06-03T00:00:00Z
"
`;

exports[`functions > get (table) shows the build failure reason 1`] = `
"function
Slug            brokenfunc
Name            Brokenfunc
Invocation Url  https://brokenfunc.functions.neon.tech
Created At      2026-06-03T00:00:00Z

current deployment
Id          3
Status      failed
Runtime     nodejs24
Memory Mib  256
Created At  2026-06-03T00:00:00Z

deployment error
Reason  Build failed: cannot resolve module left-pad

active deployment
Id          2
Status      completed
Runtime     nodejs24
Memory Mib  256
Created At  2026-06-02T00:00:00Z
"
`;

exports[`functions > get (table) with only an active deployment (old server) 1`] = `
"function
Slug            activeonly
Name            Activeonly
Invocation Url  https://activeonly.functions.neon.tech
Created At      2026-06-03T00:00:00Z

active deployment
Id          1
Status      completed
Runtime     nodejs24
Memory Mib  256
Created At  2026-06-03T00:00:00Z
"
`;

exports[`functions > get (yaml) -E is a no-op 1`] = `
"id: fn-envnames
slug: envnames
name: Envnames
invocation_url: https://envnames.functions.neon.tech
created_at: 2026-06-03T00:00:00Z
current_deployment:
  id: 1
  status: completed
  memory_mib: 256
  runtime: nodejs24
  created_at: 2026-06-03T00:00:00Z
  environment:
    - DATABASE_URL
    - LOG_LEVEL
active_deployment:
  id: 1
  status: completed
  memory_mib: 256
  runtime: nodejs24
  created_at: 2026-06-03T00:00:00Z
  environment:
    - DATABASE_URL
    - LOG_LEVEL
"
`;

exports[`functions > get (yaml) 1`] = `
"id: fn-1
slug: my-func
name: My Func
invocation_url: https://my-func.functions.neon.tech
created_at: 2026-06-03T00:00:00Z
current_deployment:
  id: 1
  status: completed
  memory_mib: 256
  runtime: nodejs24
  created_at: 2026-06-03T00:00:00Z
active_deployment:
  id: 1
  status: completed
  memory_mib: 256
  runtime: nodejs24
  created_at: 2026-06-03T00:00:00Z
"
`;

exports[`functions > get (yaml) includes environment names 1`] = `
"id: fn-envnames
slug: envnames
name: Envnames
invocation_url: https://envnames.functions.neon.tech
created_at: 2026-06-03T00:00:00Z
current_deployment:
  id: 1
  status: completed
  memory_mib: 256
  runtime: nodejs24
  created_at: 2026-06-03T00:00:00Z
  environment:
    - DATABASE_URL
    - LOG_LEVEL
active_deployment:
  id: 1
  status: completed
  memory_mib: 256
  runtime: nodejs24
  created_at: 2026-06-03T00:00:00Z
  environment:
    - DATABASE_URL
    - LOG_LEVEL
"
`;

exports[`functions > get (yaml) includes the build failure reason 1`] = `
"id: fn-brokenfunc
slug: brokenfunc
name: Brokenfunc
invocation_url: https://brokenfunc.functions.neon.tech
created_at: 2026-06-03T00:00:00Z
current_deployment:
  id: 3
  status: failed
  memory_mib: 256
  runtime: nodejs24
  created_at: 2026-06-03T00:00:00Z
  error: "Build failed: cannot resolve module left-pad"
active_deployment:
  id: 2
  status: completed
  memory_mib: 256
  runtime: nodejs24
  created_at: 2026-06-02T00:00:00Z
"
`;

exports[`functions > get --list-env-variables lists env variable names 1`] = `
"function
Slug            envnames
Name            Envnames
Invocation Url  https://envnames.functions.neon.tech
Created At      2026-06-03T00:00:00Z

deployment (current, active)
Id          1
Status      completed
Runtime     nodejs24
Memory Mib  256
Created At  2026-06-03T00:00:00Z

environment
Name
DATABASE_URL
LOG_LEVEL
"
`;

exports[`functions > get --list-env-variables with no active deployment prints an empty message 1`] = `
"function
Slug            other-func
Name            Other Func
Invocation Url  https://other-func.functions.neon.tech
Created At      2026-06-02T00:00:00Z

No environment variables on the active deployment.
"
`;

exports[`functions > get -E with no env variables prints an empty message 1`] = `
"function
Slug            my-func
Name            My Func
Invocation Url  https://my-func.functions.neon.tech
Created At      2026-06-03T00:00:00Z

deployment (current, active)
Id          1
Status      completed
Runtime     nodejs24
Memory Mib  256
Created At  2026-06-03T00:00:00Z

No environment variables on the active deployment.
"
`;

exports[`functions > get with no active deployment 1`] = `
"function
Slug            other-func
Name            Other Func
Invocation Url  https://other-func.functions.neon.tech
Created At      2026-06-02T00:00:00Z
"
`;

exports[`functions > list (table) 1`] = `
"Slug        Name        Status     Invocation Url                          Created At
my-func     My Func     completed  https://my-func.functions.neon.tech     2026-06-03T00:00:00Z
other-func  Other Func             https://other-func.functions.neon.tech  2026-06-02T00:00:00Z
"
`;

exports[`functions > list (yaml) 1`] = `
"- id: fn-1
  slug: my-func
  name: My Func
  invocation_url: https://my-func.functions.neon.tech
  created_at: 2026-06-03T00:00:00Z
  current_deployment:
    id: 1
    status: completed
    memory_mib: 256
    runtime: nodejs24
    created_at: 2026-06-03T00:00:00Z
  active_deployment:
    id: 1
    status: completed
    memory_mib: 256
    runtime: nodejs24
    created_at: 2026-06-03T00:00:00Z
- id: fn-2
  slug: other-func
  name: Other Func
  invocation_url: https://other-func.functions.neon.tech
  created_at: 2026-06-02T00:00:00Z
"
`;

exports[`functions > list resolves via the primary "function" command 1`] = `
"- id: fn-1
  slug: my-func
  name: My Func
  invocation_url: https://my-func.functions.neon.tech
  created_at: 2026-06-03T00:00:00Z
  current_deployment:
    id: 1
    status: completed
    memory_mib: 256
    runtime: nodejs24
    created_at: 2026-06-03T00:00:00Z
  active_deployment:
    id: 1
    status: completed
    memory_mib: 256
    runtime: nodejs24
    created_at: 2026-06-03T00:00:00Z
- id: fn-2
  slug: other-func
  name: Other Func
  invocation_url: https://other-func.functions.neon.tech
  created_at: 2026-06-02T00:00:00Z
"
`;

exports[`functions > list with implicit project and branch 1`] = `
"- id: fn-1
  slug: my-func
  name: My Func
  invocation_url: https://my-func.functions.neon.tech
  created_at: 2026-06-03T00:00:00Z
  current_deployment:
    id: 1
    status: completed
    memory_mib: 256
    runtime: nodejs24
    created_at: 2026-06-03T00:00:00Z
  active_deployment:
    id: 1
    status: completed
    memory_mib: 256
    runtime: nodejs24
    created_at: 2026-06-03T00:00:00Z
- id: fn-2
  slug: other-func
  name: Other Func
  invocation_url: https://other-func.functions.neon.tech
  created_at: 2026-06-02T00:00:00Z
"
`;
